--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,3 +1,1 @@
-/*
-    You can add your own custom styles here.
-*/
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap')
